Refactor and add related question on graph